# Distinctiveness-Calculator

./: CMakeLists.txt  README.md  main.cpp
assets/: source.txt
